--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/chart.js": "^2.9.41",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
